Fix word wrap in menu pages (#219)
* Fix word wrap in menu pages

* Fix drag & drop issues for reordering on mobile

* Remove "hidden" links in list views

* Fix grade font weights

* GPS fetching improvements

* Fix editing projects sets rating null

--- a/client/src/app/styles/main-views.scss
+++ b/client/src/app/styles/main-views.scss
@@ -1,4 +1,4 @@
-lc-sector, lc-crag {
+lc-sector, lc-crag, lc-area, lc-line {
 
   .p-card-content {
     padding-top: 0 !important;
