--- a/client/src/app/styles/typography.scss
+++ b/client/src/app/styles/typography.scss
@@ -6,6 +6,10 @@
   }
 }
 
+.black-font{
+  color: #000000;
+}
+
 // todo move somewhere else, not related to typography really anymore
 .quill-content{
 
